[package]
name = "satshunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.29.0", features = ["all-keys"] }
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.11.0"
rayon = "1.8.0"
